libycp/testsuite/tests/module.ycp
{
    module "NameOfModule";

    global integer ag = 1;
    integer al = 2;

    global define NameOfModule() ``{
	y2milestone ("I am a constructor\n");
	al = 5;
    }

    global define af() ``{ return ag+al; }
}

{
  _dump_scope("NameOfModule");

  return NameOfModule::af();
}

{
  import "NameOfModule";

  NameOfModule::ag = 27;
  NameOfModule::`al = 27;

  return NameOfModule::ag;
}

{
   module "A";

   integer a = 1;

   // syntax error, only declarations allowed inside a "module" block
   if (true)
   {
      integer b = 1;
   }

   return a + B::b;
}
